--- a/src/slideshow/slideshow.css
+++ b/src/slideshow/slideshow.css
@@ -138,7 +138,7 @@ body {
   color: #17ff2e; }
 
 .reveal .slides section .fragment.highlight-blue.visible {
-  color: #1b91ff; }
+  color: #3771ef; }
 
 .reveal .slides section .fragment.highlight-current-red.current-fragment {
   color: #ff2c2d; }
@@ -147,7 +147,7 @@ body {
   color: #17ff2e; }
 
 .reveal .slides section .fragment.highlight-current-blue.current-fragment {
-  color: #1b91ff; }
+  color: #3771ef; }
 
 /*********************************************
  * DEFAULT ELEMENT STYLES
@@ -237,7 +237,7 @@ body {
     border: 0;
     outline: 0;
     cursor: pointer;
-    color: currentColor;
+    color: #3771ef;
     -webkit-transform: scale(0.9999);
             transform: scale(0.9999);
     transition: color 0.2s ease, opacity 0.2s ease, -webkit-transform 0.2s ease;
@@ -258,7 +258,7 @@ body {
     width: 2.6em;
     height: 0.5em;
     border-radius: 0.25em;
-    background-color: currentColor;
+    background-color: #3771ef;
     transition: all 0.15s ease, background-color 0.8s ease;
     -webkit-transform-origin: 0.2em 50%;
             transform-origin: 0.2em 50%;
@@ -436,7 +436,7 @@ body {
   display: block;
   height: 100%;
   width: 0px;
-  background-color: currentColor;
+  background-color: #3771ef;
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
 /*********************************************
@@ -456,7 +456,7 @@ body {
   padding: 5px; }
 
 .reveal .slide-number a {
-  color: currentColor; }
+  color: #3771ef; }
 
 .reveal .slide-number-delimiter {
   margin: 0 3px; }
